--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <h1>Daily Life</h1>
+    </head>
+    <body>
+        
+    </body>
+</html>
