--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <h1>Daily Life</h1>
+        <title>The Daily Life Of Yu MiaoMiao & Sun WangWang </title>
     </head>
     <body>
-
+        <h1>Daily Life</h1>
     </body>
 </html>
