--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>The Daily Life Of Yu MiaoMiao & Sun WangWang </title>
+        <title>The Daily Life Of Yu MiaoMiao &amp Sun WangWang </title>
     </head>
     <body>
         <h1>Daily Life</h1>
