--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>The Daily Life Of Yu MiaoMiao &amp Sun WangWang </title>
+        <style type="text/css">
+            hr {color: sienna;}
+            p {margin-left: 20px;}
+            body {background-image: url("src/img/backgrand.jpg");}
+        </style>
     </head>
     <body>
         <h1>Daily Life</h1>
