--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <style type="text/css">
             hr {color: sienna;}
             p {margin-left: 20px;}
-            body {background-image: url("src/img/backgrand.jpg");}
+            body {background-image: url("/src/img/backgrand.jpg");}
         </style>
     </head>
     <body>
