--- a/index.html
+++ b/index.html
@@ -2,13 +2,42 @@
 <html>
     <head>
         <title>The Daily Life Of Yu MiaoMiao &amp Sun WangWang </title>
-        <style type="text/css">
-            hr {color: sienna;}
-            p {margin-left: 20px;}
-            body {background-image: url("/src/img/backgrand.jpg");}
+        <link rel="stylesheet" type="text/css" href="/common.css">
+        <style>
+            #header {
+                background-color:black;
+                color:white;
+                text-align:center;
+                padding:5px;
+            }
+            #nav {
+                line-height:30px;
+                background-color:#eeeeee;
+                height:300px;
+                width:100px;
+                float:left;
+                padding:5px;
+            }
+            #section {
+                width:350px;
+                float:left;
+                padding:10px;
+            }
+            #footer {
+                background-color:black;
+                color:white;
+                clear:both;
+                text-align:center;
+               padding:5px;
+            }
         </style>
+
     </head>
     <body>
-        <h1>Daily Life</h1>
+        <div id = "wrapper">
+            <div id = "header_index">
+                kjdkfjkdjfkdfj
+            </div>
+        </div>
     </body>
 </html>
