--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     </head>
     <body>
         <div id = "wrapper">
-            
+
             <div id = "header_index">
-                kjdkfjkdjfkdfj
+                <div id = "header_img">
+                </div>
+
             </div>
         </div>
     </body>
