--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <div id = "wrapper">
 
             <div id = "header_index">
-                <div id = "header_img">
-                </div>
+                <img src = "/src/img/docatg.png"/>
 
             </div>
         </div>
