--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div id = "wrapper">
 
             <div id = "header_index">
-                <img src = "/src/img/docatg.png"/>
+                <img src = "/src/img/docatg.png" width="50" height="50"/>
 
             </div>
         </div>
