--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 
     </head>
     <body>
+        <div id = "top"/>
         <div id = "wrapper">
 
             <div id = "header_index">
-                <img src = "/src/img/docatg.png" width="100" height="100"/>
+                <hr style="height:5px;border:none; border-top:5px ridge green;" />
+                <img src = "/src/img/docatg.png" width="100" height="100" />
+                <hr style="height:5px;border:none;border-top:5px ridge green;" />
 
             </div>
         </div>
