--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     </head>
     <body>
-        <div id = "top"/>
+        <div class = "top"/>
         <div id = "wrapper">
 
             <div id = "header_index">
