--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
 
     </head>
     <body>
-        <div id = "top"></div>
-        <div id = "wrapper">
-
-            <div id = "header_index">
-                <img src = "/src/img/docatg.png" width="100" height="100" />
-
-            </div>
+        <div id = "header">
+            <h1>BLOG</h1>
+            <p>kkkkkkkkkk</p>
         </div>
+
     </body>
 </html>
