--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>The Daily Life Of Yu MiaoMiao &amp Sun WangWang </title>
-        <link rel="stylesheet" type="text/css" href="/common.css">
+        <link rel="stylesheet" type="text/css" href="/CSS/common.css">
+        <link rel="stylesheet" type="text/css" href="/CSS/index.css">
 
     </head>
     <body>
@@ -10,6 +11,5 @@
             <h1>BLOG</h1>
             <p>kkkkkkkkkk</p>
         </div>
-
     </body>
 </html>
