--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div id = "header">
+            <img src="/src/img/docatg.png" width="230" height="230" alt="博主"/>
             <h1>BLOG</h1>
             <p>kkkkkkkkkk</p>
         </div>
