--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     </head>
     <body>
         <div id = "header">
-            <img src="/src/img/docatg.png" width="100" height="100" alt="博主"/>
-            <h1>BLOG</h1>
-            <p>kkkkkkkkkk</p>
+            <div class = "logo">
+                <img src="/src/img/docatg.png" width="100" height="100" alt="博主"/>
+            </div>
+            <div >
+                <h1>BLOG</h1>
+                <p>kkkkkkkkkk</p>
+            </div>
         </div>
     </body>
 </html>
