--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class = "logo">
                 <img src="/src/img/docatg.png" width="100" height="100" alt="博主"/>
             </div>
-            <div >
+            <div class = "titlename">
                 <h1>BLOG</h1>
             </div>
         </div>
