--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>The Daily Life Of Yu MiaoMiao &amp Sun WangWang </title>
-        <link rel="stylesheet" type="text/css" href="/CSS/common.css">
+        <title>The Daily Life Of Yu MiaoMiao And Sun WangWang </title>
         <link rel="stylesheet" type="text/css" href="/CSS/index.css">
 
     </head>
     <body>
         <div id = "header">
-            <div class = "logo">
+            <div class = "left logo">
                 <img src="/src/img/docatg.png" width="100" height="100" alt="博主"/>
             </div>
-            <div class = "titlename">
+            <div class = "left titlename">
                 <h1>BLOG</h1>
                 <p>dddd</p>
             </div>
+            <div class="clear"></div>
         </div>
     </body>
 </html>
