--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div class = "left logo">
                 <img src="/src/img/docatg.png" width="100" height="100" alt="博主"/>
             </div>
-            <div class = "left titlename">
+            <div class = "center titlename">
                 <h1>BLOG</h1>
                 <p>dddd</p>
             </div>
