--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <body>
         <div id = "header">
             <div class = "left logo">
-                <img src="/src/img/docatg.png" width="100" height="100" alt="博主"/>
+                <img src="/src/img/docatg.png" width="100" height="100" alt="title"/>
             </div>
             <div class = "left titlename">
-                <h1>BLOG</h1>
+                <h1>Daily Life</h1>
                 <p>dddd</p>
             </div>
             <div class="clear"></div>
