--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             </div>
             <div class = "left titlename">
                 <h1>Daily Life</h1>
-                <p>ddd</p>
+                <p>Woo！！</p>
             </div>
             <div class="clear"></div>
         </div>
