--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id = "header">
             <div class = "left logo">
-                <img src="/src/img/docatg.png" width="100" height="100" alt="title"/>
+                <img src="/src/img/docatg.png" alt="title"/>
             </div>
             <div class = "left titlename">
                 <h1>Daily Life</h1>
