--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 
     </head>
     <body>
+        <hr style="height:5px;border:none;border-top:5px ridge green;" />
         <div id = "header">
             <div class = "left logo">
-                <img src="/src/img/docatg.png" alt="title"/>
+                <img src="/src/img/docatg.png" width="100" height="100" alt="title"/>
             </div>
             <div class = "left titlename">
                 <h1>Daily Life</h1>
@@ -16,5 +17,6 @@
             </div>
             <div class="clear"></div>
         </div>
+        <hr style="height:5px;border:none;border-top:5px ridge green;" />
     </body>
 </html>
